# fastmath

./: .gitignore  README.md  benchmark.py  pyproject.toml
.github/workflows/: build.yml
src/fastmath/: __init__.py  _core.c  _pyfallback.py
src/fastmath_cosmin.egg-info/: SOURCES.txt
